--- a/views/about.html
+++ b/views/about.html
@@ -8,6 +8,12 @@
         <title>about</title>
 </head>
 <body>
-    <h1>ok</h1>
+    <div class="container">
+        <div class="about">
+            <h1>About</h1>
+            <p>Michael Jeffrey Jordan (born February 17, 1963), also known by his initials MJ,[9] is an American businessman and former professional basketball player.
+                His biography on the official NBA website states:<br> "By acclamation, Michael Jordan is the greatest basketball player of all time."</p>
+        </div>
+    </div>
 </body>
 </html>
