--- a/views/photoGallery.html
+++ b/views/photoGallery.html
@@ -8,6 +8,8 @@
     <title>photoGalerry</title>
 </head>
 <body>
-    <h1>Hello</h1> 
+    <nav class="gallery">
+        <h1>Photo Gallery</h1> 
+    </nav>
 </body>
 </html>
