--- a/views/works.html
+++ b/views/works.html
@@ -8,6 +8,10 @@
     <title>works</title>
 </head>
 <body>
-    <h1>Hello</h1> 
+<div class="works">
+    <h1>Works</h1>
+   <p>Jordan played 13 seasons with the Bulls with a year and a half hiatus to play baseball in the Chicago White Sox minor league system.<br>
+    He finished his playing career with two seasons with the Washington Wizards and went on to become the owner of the Charlotte Hornets.</p> 
+</div>
 </body>
 </html>
